Update tribute page

--- a/1 Responsive Web Design/8 Responsive Web Design Projects/M2 Basic/5 Tibute Page Sertification/index.html
+++ b/1 Responsive Web Design/8 Responsive Web Design Projects/M2 Basic/5 Tibute Page Sertification/index.html
@@ -18,7 +18,7 @@
         <!--3-->
         <figure id="img-div">
             <!--4-->
-            <img id="image" src="https://github.com/WarDog1000/FreeCodeCamp/blob/main/1%20Responsive%20Web%20Design/9%20CSS%20Flexbox%20Projects/5%20Tibute%20Page%20Sertification/img.png?raw=true">
+            <img id="image" src="https://github.com/WarDog1000/FreeCodeCamp/blob/main/1%20Responsive%20Web%20Design/8%20Responsive%20Web%20Design%20Projects/M2%20Basic/5%20Tibute%20Page%20Sertification/img.png?raw=true">
             <!--5-->
             <figcaption id="img-caption">Perdido, solo y separado de su familia, un gato callejero debe desentrañar un
                 antiguo misterio para escapar de una ciberciudad olvidada y encontrar el camino a casa.</figcaption>
