Order and rename files

--- a/2 JavaScript Algorithms and Data Structures/1 Basic JavaScript/index.html
+++ b/2 JavaScript Algorithms and Data Structures/1 Basic JavaScript/index.html
@@ -11,7 +11,9 @@
 
 <body>
 
-    <script src="script2.js"></script>
+    <script src="1-basic.js"></script>
+    <script src="26-console.js"></script>
+    <script src="27-date.js"></script>
 </body>
 
 </html>
