Learning Js 33-modules

--- a/2 JavaScript Algorithms and Data Structures/1 Basic JavaScript/index.html
+++ b/2 JavaScript Algorithms and Data Structures/1 Basic JavaScript/index.html
@@ -10,10 +10,18 @@
 </head>
 
 <body>
+    <!-- Debe ejecutars en primer lugar, la importacion de modulos -->
+    <script src="./33-modulos/33-modulos.js" type="module"></script>
 
-    <script src="1-basic.js"></script>
+    <!-- <script src="1-basic.js"></script>
     <script src="26-console.js"></script>
     <script src="27-date.js"></script>
+    <script src="28-Math.js"></script>
+    <script src="29-OR-AND.js"></script>
+    <script src="30-window-messages.js"></script>
+    <script src="31-regex.js"></script>
+    <script src="32-funciones-anonimas.js"></script> -->
+    
 </body>
 
 </html>
