--- a/2 JavaScript Algorithms and Data Structures/1 Basic JavaScript/index.html
+++ b/2 JavaScript Algorithms and Data Structures/1 Basic JavaScript/index.html
@@ -3,25 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic JavaScript</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <!-- Debe ejecutars en primer lugar, la importacion de modulos -->
-    <script src="./33-modulos/33-modulos.js" type="module"></script>
+    <!-- <script src="./33-modulos/33-modulos.js" type="module"></script> -->
 
-    <!-- <script src="1-basic.js"></script>
+    <script src="1-basic.js"></script>
     <script src="26-console.js"></script>
     <script src="27-date.js"></script>
     <script src="28-Math.js"></script>
     <script src="29-OR-AND.js"></script>
     <script src="30-window-messages.js"></script>
     <script src="31-regex.js"></script>
-    <script src="32-funciones-anonimas.js"></script> -->
+    <script src="32-funciones-anonimas.js"></script>
     
+    <script src="34-ejercicios.js"></script>
+    <script src="35-ejercicios.js"></script>
+    <script src="36-ejercicios.js"></script>
 </body>
 
 </html>
