Learning js 45-asincronia 24/10/2022

--- a/2 JavaScript Algorithms and Data Structures/1 Basic JavaScript/index.html
+++ b/2 JavaScript Algorithms and Data Structures/1 Basic JavaScript/index.html
@@ -23,6 +23,9 @@
     <script src="34-ejercicios.js"></script>
     <script src="35-ejercicios.js"></script>
     <script src="36-ejercicios.js"></script>
+
+    <script src="44-temporizadores.js"></script>
+    <script src="45-asincronia.js"></script>
 </body>
 
 </html>
