--- a/2 JavaScript Algorithms and Data Structures/1 Basic JavaScript/index.html
+++ b/2 JavaScript Algorithms and Data Structures/1 Basic JavaScript/index.html
@@ -16,16 +16,17 @@
     <script src="27-date.js"></script>
     <script src="28-Math.js"></script>
     <script src="29-OR-AND.js"></script>
-    <script src="30-window-messages.js"></script>
+    <!-- <script src="30-window-messages.js"></script> -->
     <script src="31-regex.js"></script>
     <script src="32-funciones-anonimas.js"></script>
     
-    <script src="34-ejercicios.js"></script>
-    <script src="35-ejercicios.js"></script>
-    <script src="36-ejercicios.js"></script>
+    <!-- <script src="34-ejercicios.js"></script> -->
+    <!-- <script src="35-ejercicios.js"></script> -->
+    <!-- <script src="36-ejercicios.js"></script> -->
 
-    <script src="44-temporizadores.js"></script>
-    <script src="45-asincronia.js"></script>
+    <!-- <script src="44-temporizadores.js"></script> -->
+    <!-- <script src="45-asincronia.js"></script> -->
+    <script src="46-callbacks.js"></script>
 </body>
 
 </html>
