Learning Js 47-promesas.js

--- a/2 JavaScript Algorithms and Data Structures/1 Basic JavaScript/index.html
+++ b/2 JavaScript Algorithms and Data Structures/1 Basic JavaScript/index.html
@@ -27,6 +27,7 @@
     <!-- <script src="44-temporizadores.js"></script> -->
     <!-- <script src="45-asincronia.js"></script> -->
     <script src="46-callbacks.js"></script>
+    <!-- <script src="47-promesas.js"></script> -->
 </body>
 
 </html>
