Finish project random-quote-machine

--- a/3 Front End Development Libraries/7 Projectcs/Random Quote Machine/index.html
+++ b/3 Front End Development Libraries/7 Projectcs/Random Quote Machine/index.html
@@ -13,8 +13,7 @@
 <body>
     <div class="container">
         <div class="freecodecamp-logo-container">
-            <img src="freecodecamp-logo.png"
-                alt="Logo de freeCodeCamp" class="freecodecamp-logo" />
+            <img src="https://design-style-guide.freecodecamp.org/downloads/fcc_primary_large.jpg" alt="Logo de freeCodeCamp" class="freecodecamp-logo" />
         </div>
         <!-- #1 -->
         <div id="quote-box">
@@ -23,34 +22,33 @@
                 <!-- #2 -->
                 <div id="text">
                     <i class="fas fa-quote-left"></i>
-                    <div class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem eum nesciunt
-                        ipsam veritatis sapiente illum odit rem quia, explicabo laudantium inventore quisquam alias in
-                        iste omnis reiciendis consectetur sed impedit!</div>
+                    <div class="quote">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus aperiam maxime eos sed qui consequatur magni explicabo voluptates possimus! Perferendis recusandae voluptatibus hic totam! Illum nostrum suscipit delectus vero! Pariatur.</div>
                     <i class="fas fa-quote-right"></i>
                 </div>
                 <!-- #3 -->
                 <div id="author">
                     <span>__</span>
-                    <span class="name">Mary Kay Ash</span>
+                    <span class="name">Marco Tulio Cicerón</span>
                 </div>
             </div>
-            
+
             <div class="buttons">
                 <div class="featres">
                     <ul>
                         <li class="sound"><i class="fas fa-volume-up"></i></li>
                         <li class="copy"><i class="fas fa-copy"></i></li>
                         <!-- #5 -->
-                        <li class="twitter"> <a href="twitter.com/intent/tweet" id="tweet-quote" target="_blank"><i class="fab fa-twitter"></i></a> </li>
+                        <li class="twitter"> <a href="twitter.com/intent/tweet" id="tweet-quote" target="_blank"><i
+                                    class="fab fa-twitter"></i></a> </li>
                     </ul>
                     <!-- #4 -->
                     <button id="new-quote">New Quote</button>
                 </div>
-                
+
             </div>
         </div>
     </div>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
