--- a/2 JavaScript Algorithms and Data Structures/2 Intermediate JavaScript/07_dom/07-dom.html
+++ b/2 JavaScript Algorithms and Data Structures/2 Intermediate JavaScript/07_dom/07-dom.html
@@ -160,7 +160,7 @@
   <br><br>
   <button id="imprimir-ventana">Imprimir Ventana</button>
   <br><br>
-  <script src="js/dom.js"></script>
+  <script src="dom.js"></script>
 </body>
 
 </html>
