--- a/2 JavaScript Algorithms and Data Structures/2 Intermediate JavaScript/07_dom/07-dom.html
+++ b/2 JavaScript Algorithms and Data Structures/2 Intermediate JavaScript/07_dom/07-dom.html
@@ -42,7 +42,7 @@
     </ul>
   </nav>
   <input type ="text" name="nombre" placeholder="Nombre">
-  <a href="" class="link-dom" href="07-dom.html">DOM</a>
+  <a href="" class="link-dom" href="07-dom.html" data-description="Document Object Model" data-id="1">DOM</a>
   <section class="cards">
     <figure class="card">
       <img src="https://placeimg.com/200/200/tech" alt="Tech">
