--- a/2 JavaScript Algorithms and Data Structures/2 Intermediate JavaScript/07_dom/07-dom.html
+++ b/2 JavaScript Algorithms and Data Structures/2 Intermediate JavaScript/07_dom/07-dom.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WEB APIs</title>
+  <style>
+    :root {
+      --yellow-color: #F7DF1E;
+      --dark-color: #222; 
+    }
+  </style>
 </head>
 
 <body>
@@ -42,7 +48,7 @@
     </ul>
   </nav>
   <input type ="text" name="nombre" placeholder="Nombre">
-  <a href="" class="link-dom" href="07-dom.html" data-description="Document Object Model" data-id="1">DOM</a>
+  <a href="" class="link-dom" href="07-dom.html" data-description="Document Object Model" data-id="1" style="background-color: #F7DF1E; color: #222;">DOM</a>
   <section class="cards">
     <figure class="card">
       <img src="https://placeimg.com/200/200/tech" alt="Tech">
