learn DOM: insertAdjacent

--- a/2 JavaScript Algorithms and Data Structures/2 Intermediate JavaScript/07_dom/07-dom.html
+++ b/2 JavaScript Algorithms and Data Structures/2 Intermediate JavaScript/07_dom/07-dom.html
@@ -12,13 +12,13 @@
     }
 
     .cards {
-      border: thin solid var(--dark-color);
+      border: thin solid var(--yellow-color);
       padding: 1rem;
     }
 
     .card {
       display: inline-block;
-      background-color: var(--dark-color);
+      background-color: #222;
       color: var(--yellow-color);
     }
 
@@ -106,6 +106,7 @@
     </figure>
   </section>
 
+   <!-- Template no se renderiza en el navegador, se una como modelo dinamico similar a una clase -->
   <template id="template-card">
     <figure class="card">
       <img>
