learn DOM: events

--- a/2 JavaScript Algorithms and Data Structures/2 Intermediate JavaScript/07_dom/07-dom.html
+++ b/2 JavaScript Algorithms and Data Structures/2 Intermediate JavaScript/07_dom/07-dom.html
@@ -114,6 +114,18 @@
     </figure>
   </template>
 
+  <h3>Eventos en JavaScript</h3>
+  <h4>Manejadores de Eventos</h4>
+  <button onclick="alert('Metodo considerado mala practica')">Eventos en atributos HTML</button>
+  <button onclick="mensaje()">Funcion que se Ejecuta en un atributo de evento HTML</button>
+  <br><br>
+  <button id="evento-semantico">Evento con manejador Semantico</button>
+  <button id="evento-multiple">Evento con manejador Multiple</button>
+  <button src="dom.js">Click</button>
+
+  <br><br>
+  <button id="multy-event">Otro evento con manejador Multiple</button>
+
   <script src="dom.js"></script>
 </body>
 
