learn DOM: remove event

--- a/2 JavaScript Algorithms and Data Structures/2 Intermediate JavaScript/07_dom/07-dom.html
+++ b/2 JavaScript Algorithms and Data Structures/2 Intermediate JavaScript/07_dom/07-dom.html
@@ -126,6 +126,9 @@
   <br><br>
   <button id="multy-event">Otro evento con manejador Multiple</button>
 
+  <br><br>
+  <button id="remove-event">Remover Eventos con manejadores multiples</button>
+
   <script src="dom.js"></script>
 </body>
 
