--- a/2 JavaScript Algorithms and Data Structures/2 Intermediate JavaScript/07_dom/07-dom.html
+++ b/2 JavaScript Algorithms and Data Structures/2 Intermediate JavaScript/07_dom/07-dom.html
@@ -158,6 +158,9 @@
     </div>
   </section>
 
+  <!-- <h3 style="width: 2000px;">Manejo del BOM ("Browser Object Model")</h3> -->
+
+
   <script src="dom.js"></script>
 </body>
 
