learn  BOM: methods

--- a/2 JavaScript Algorithms and Data Structures/2 Intermediate JavaScript/07_dom/07-dom.html
+++ b/2 JavaScript Algorithms and Data Structures/2 Intermediate JavaScript/07_dom/07-dom.html
@@ -158,7 +158,12 @@
     </div>
   </section>
 
-  <!-- <h3 style="width: 2000px;">Manejo del BOM ("Browser Object Model")</h3> -->
+  <h3 style="width: 2000px;">Manejo del BOM ("Browser Object Model")</h3>
+  <button id="abrir-ventana">Abrir</button>
+  <br>
+  <button id="cerrar-ventana">Cerrar</button>
+  <br>
+  <button id="imprimir-ventana">Imprimir</button>
 
 
   <script src="dom.js"></script>
