start learn advanced javaScript

--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="styles.css" />
 
     <!-- 1 - Menu Hambuerguesa -->
-    <link rel="stylesheet" href="components/1_hamburguer_menu/menu_hamburbuesa.css" />
+    <link rel="stylesheet" href="components/1_hamburger_btn/hamburger_btn.css" />
   </head>
   <body>
     <!-- Header -->
     <header>
-        <h3>Ejecrcicios del DOM</h3>
+        <h3>Ejercicios del DOM</h3>
     </header>
     <!-- 1 - Menu Hamburguesa -->
-    <button class="hamburger hamburger--vortex menu_hamburguesa" type="button">
+    <button class="hamburger hamburger--vortex" type="button">
       <span class="hamburger-box">
         <span class="hamburger-inner"></span>
       </span>
@@ -57,6 +57,6 @@
     <footer></footer>
 
     <!-- Script -->
-    <script src="index-dom.js"></script>
+    <script src="index-dom.js" type="module"></script>
   </body>
 </html>
