add reloj function

--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
@@ -10,6 +10,8 @@
 
     <!-- 1 - Menu Hambuerguesa -->
     <link rel="stylesheet" href="components/1_hamburger_btn/hamburger_btn.css" />
+    <!-- 2 - Reloj -->
+    <link rel="stylesheet" href="components/2_relog/reloj.css" />
   </head>
   <body>
     <!-- Header -->
@@ -26,7 +28,7 @@
     <!-- Panel -->
     <aside class="panel">
       <nav class="menu">
-        <a href="#seccion1">Seccion 1</a>
+        <a href="#seccion1">Reloj Digital y Alarma Sonora</a>
         <a href="#seccion2">Seccion 2</a>
         <a href="#seccion3">Seccion 3</a>
         <a href="#seccion4">Seccion 4</a>
@@ -37,7 +39,15 @@
     <!-- Main -->
     <main>
       <section id="seccion1" class="section">
-        <h2>Seccion 1</h2>
+        <h2>Reloj digital y Alarma Sonora</h2>
+        <div id="relog">
+          <div>
+            <button id="activar-reloj">Iniciar Reloj</div>
+            <button id="detener-reloj">Detener Reloj</div>
+            <button id="activar-alarma">Activar Alarma</div>
+            <button id="detener-alarma">Detener Alarma</div>
+          </div>
+        </div>
       </section>
       <section id="seccion2" class="section">
         <h2>Seccion 2</h2>
