--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
@@ -8,10 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css" />
     <link rel="stylesheet" href="styles.css" />
 
-    <!-- 1 - Menu Hambuerguesa -->
+    <!-- 0 - Menu Hambuerguesa -->
     <link rel="stylesheet" href="components/1_hamburger_btn/hamburger_btn.css" />
-    <!-- 2 - Reloj -->
-    <link rel="stylesheet" href="components/2_relog/reloj.css" />
+    <!-- 1 - Reloj Digital-->
+    <link rel="stylesheet" href="components/2_reloj/reloj.css" />
+    <!-- 1 - Eventos del teclado -->
+    <link rel="stylesheet" href="components/3_teclado/teclado.css" />
+    <!-- 1 - Cuenta regresiva -->
+    <link rel="stylesheet" href="components/4_countdown/countdown.css" />
+    <!-- 1 - Scroll Top -->
+    <link rel="stylesheet" href="components/5_scroll-top/scroll-top.css" />
   </head>
   <body>
     <!-- Header -->
@@ -29,8 +35,8 @@
     <aside class="panel">
       <nav class="menu">
         <a href="#seccion1">Reloj Digital y Alarma Sonora</a>
-        <a href="#seccion2">Seccion 2</a>
-        <a href="#seccion3">Seccion 3</a>
+        <a href="#seccion2">Eventos del Teclado</a>
+        <a href="#seccion3">Cuenta Regresiva</a>
         <a href="#seccion4">Seccion 4</a>
         <a href="#seccion5">Seccion 5</a>
       </nav>
@@ -38,23 +44,32 @@
 
     <!-- Main -->
     <main>
+      <!-- ============ RELOJ DIGITAL Y ALARMA SONORA ============ -->
       <section id="seccion1" class="section">
-        <h2>Reloj digital y Alarma Sonora</h2>
-        <div id="relog">
+        <h2>Reloj Digital y Alarma Sonora</h2>
+        <div id="reloj"></div>
           <div>
-            <button id="activar-reloj">Iniciar Reloj</div>
-            <button id="detener-reloj">Detener Reloj</div>
-            <button id="activar-alarma">Activar Alarma</div>
-            <button id="detener-alarma">Detener Alarma</div>
+            <button id="activar-reloj">Iniciar Reloj</button>
+            <button id="detener-reloj">Detener Reloj</button>
+            <button id="activar-alarma">Activar Alarma</button>
+            <button id="detener-alarma">Detener Alarma</button>
           </div>
-        </div>
       </section>
+
+      <!-- ============ EVENTOS DEL TECLADO ============ -->
       <section id="seccion2" class="section">
-        <h2>Seccion 2</h2>
+        <h2>Eventos del Teclado</h2>
+        <article class="stage">
+          <div class="ball"></div>
+        </article>
       </section>
+
+      <!-- ============ CUENTA REGRESIVA ============ -->
       <section id="seccion3" class="section">
-        <h2>Seccion 3</h2>
+        <h2>Cuenta Regresiva</h2>
+        <div id="countdown">Aqui va un contador</div>
       </section>
+
       <section id="seccion4" class="section">
         <h2>Seccion 4</h2>
       </section>
@@ -62,6 +77,9 @@
         <h2>Seccion 5</h2>
       </section>
     </main>
+    
+    <!-- ============ CUENTA REGRESIVA ============ -->
+    <button class="scroll-top"></button>
 
     <!-- Footer -->
     <footer></footer>
