--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
@@ -79,7 +79,7 @@
     </main>
     
     <!-- ============ CUENTA REGRESIVA ============ -->
-    <button class="scroll-top"></button>
+    <button class="scroll-top hidden">&#11014;</button>
 
     <!-- Footer -->
     <footer></footer>
