add local storage

--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
@@ -90,11 +90,7 @@
     <button class="scroll-top hidden">&#11014;</button>
     
     <!-- ============ DARK THEME ============ -->
-    <button class="dark-theme">
-      C
-      <!-- <i class="ri-sun-line sun hidden"></i>
-      <i class="ri-moon-line moon"></i> -->
-    </button>
+    <button class="dark-theme">C</button>
 
     <!-- Footer -->
     <footer></footer>
