--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
@@ -45,7 +45,7 @@
         <a href="#seccion1">Reloj Digital y Alarma Sonora</a>
         <a href="#seccion2">Eventos del Teclado</a>
         <a href="#seccion3">Cuenta Regresiva</a>
-        <a href="#seccion4">Seccion 4</a>
+        <a href="#seccion4">Responsive con JavaScript</a>
         <a href="#seccion5">Seccion 5</a>
       </nav>
     </aside>
@@ -79,10 +79,12 @@
       </section>
 
       <section id="seccion4" class="section">
-        <h2>Seccion 4</h2>
+        <h2>Responsive Design con JavaScript</h2>
       </section>
       <section id="seccion5" class="section">
         <h2>Seccion 5</h2>
+        <div id="youtube"></div>
+        <div id="gmaps"></div>
       </section>
     </main>
     
