add responsive tester

--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
@@ -93,7 +93,7 @@
       <!-- ============ RESPONSIVE TESTER ============ -->
       <section id="seccion5" class="section" style="background-color: var(--gray-color);">
         <h2>Responsive Tester</h2>
-        <form id="responsive-tester">
+        <form action="" id="responsive-tester">
           <input name="direccion" type="url" placeholder="URL" required>
           <br>
           <input name="ancho" type="text" placeholder="Ancho" required>
@@ -102,7 +102,7 @@
           <br>
           <input name="probar" type="submit" value="Probar">
           <input name="cerrar" type="button" value="Cerrar">
-      </form>
+        </form>
       </section>
       
       <section id="seccion6" class="section">
