--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
@@ -48,10 +48,6 @@
         <a href="#seccion4">Responsive con JavaScript</a>
         <a href="#seccion5">Responsive Tester</a>
         <a href="#seccion6">Seccion 6</a>
-        <a href="#seccion7">Seccion 7</a>
-        <a href="#seccion8">Seccion 8</a>
-        <a href="#seccion9">Seccion 9</a>
-        <a href="#seccion10">Seccion 10</a>
       </nav>
     </aside>
 
@@ -93,7 +89,7 @@
       <!-- ============ RESPONSIVE TESTER ============ -->
       <section id="seccion5" class="section" style="background-color: var(--gray-color);">
         <h2>Responsive Tester</h2>
-        <form action="" id="responsive-tester">
+        <form id="responsive-tester">
           <input name="direccion" type="url" placeholder="URL" required>
           <br>
           <input name="ancho" type="text" placeholder="Ancho" required>
