--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
@@ -55,7 +55,7 @@
         <a href="#seccion8">Deteccion de Webcam</a>
         <a href="#seccion9">Geolocalizacion</a>
         <a href="#seccion10">Filtros de Busqueda</a>
-        <a href="#seccion11"></a>
+        <a href="#seccion11">Sorteo Digital</a>
         <a href="#seccion12"></a>
         <a href="#seccion13"></a>
         <a href="#seccion14"></a>
@@ -136,7 +136,7 @@
         <h2>Geolocalizacion</h2>
         <div id="location"></div>
       </section>
-      
+            
       <!-- ============ FILTROS DE BUSQUEDA ============ -->
       <section id="seccion10" class="section" style="background-color: var(--gray-color);">
         <h2>Filtros de Busqueda</h2>
@@ -167,6 +167,24 @@
             <figcaption>Architecture</figcaption>
           </figure>
         </article>
+      </section>
+
+      <!-- ============ SORTEO DIGITAL ============ -->
+      <section id="seccion9" class="section">
+        <h2>Sorteo Digital</h2>
+        <ul class="players">
+          <li class="player">JavaScript</li>
+          <li class="player">PHP</li>
+          <li class="player">JAVA</li>
+          <li class="player">C</li>
+          <li class="player">Python</li>
+          <li class="player">Ruby</li>
+          <li class="player">Go</li>
+          <li class="player">Visual Basic</li>
+          <li class="player">Rust</li>
+          <li class="player">Perl</li>
+        </ul>
+        <button id="sort-btn">Obtener Ganador</button>
       </section>
 
     </main>
