--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
@@ -12,22 +12,24 @@
     <!-- Remixicon.com -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.0.0/fonts/remixicon.css" rel="stylesheet">
 
-    <!-- 0 - Menu Hambuerguesa -->
+    <!-- Menu Hambuerguesa -->
     <link rel="stylesheet" href="components/1_hamburger_btn/hamburger_btn.css" />
-    <!-- 1 - Reloj Digital-->
+    <!-- Reloj Digital-->
     <link rel="stylesheet" href="components/2_reloj/reloj.css" />
-    <!-- 3 - Eventos del teclado -->
+    <!-- Eventos del teclado -->
     <link rel="stylesheet" href="components/3_teclado/teclado.css" />
-    <!-- 4 - Cuenta regresiva -->
+    <!-- Cuenta regresiva -->
     <link rel="stylesheet" href="components/4_countdown/countdown.css" />
-    <!-- 5 - Scroll Top -->
+    <!-- Scroll Top -->
     <link rel="stylesheet" href="components/5_scroll-top/scroll-top.css" />
-    <!-- 6 - Dark Theme Button -->
+    <!-- Dark Theme Button -->
     <link rel="stylesheet" href="components/6_dark-theme/dark-theme.css" />
-    <!-- 10 - Deteccion de Red -->
+    <!-- Deteccion de Red -->
     <link rel="stylesheet" href="components/10_deteccion-red/deteccion-red.css" />
-    <!-- 13 - Filtros de Busqueda -->
+    <!-- Filtros de Busqueda -->
     <link rel="stylesheet" href="components/13_filtros-busqueda/filtros-busqueda.css" />
+    <!-- Responsive Slider -->
+    <link rel="stylesheet" href="components/15_carrusel/carrusel.css" />
 
   </head>
   <body class="body" data-dark>
@@ -56,7 +58,7 @@
         <a href="#seccion9">Geolocalizacion</a>
         <a href="#seccion10">Filtros de Busqueda</a>
         <a href="#seccion11">Sorteo Digital</a>
-        <a href="#seccion12"></a>
+        <a href="#seccion12">Responsive Slider</a>
         <a href="#seccion13"></a>
         <a href="#seccion14"></a>
         <a href="#seccion15"></a>
@@ -168,9 +170,9 @@
           </figure>
         </article>
       </section>
-
+      
       <!-- ============ SORTEO DIGITAL ============ -->
-      <section id="seccion9" class="section">
+      <section id="seccion11" class="section">
         <h2>Sorteo Digital</h2>
         <ul class="players">
           <li class="player">JavaScript</li>
@@ -185,6 +187,23 @@
           <li class="player">Perl</li>
         </ul>
         <button id="sort-btn">Obtener Ganador</button>
+      </section>
+
+      <!-- ============ RESPONSIVE SLIDER ============ -->
+      <section id="seccion12" class="section" style="background-color: var(--gray-color);">
+        <h2>Responsive Slider</h2>
+        <div class="slider">
+          <div class="slider-container">
+            <div class="slider-slide active"><img src="https://placeimg.com/400/400/tech" alt="Tech"><figcaption>Architecture</figcaption></div>
+            <div class="slider-slide"><img src="https://placeimg.com/400/400/animals" alt="Animals"><figcaption>Animals</figcaption></div>
+            <div class="slider-slide"><img src="https://placeimg.com/400/400/people" alt="People"><figcaption>People</figcaption></div>
+            <div class="slider-slide"><img src="https://placeimg.com/400/400/nature" alt="Nature"><figcaption>Nature</figcaption></div>
+          </div>
+          <div class="slider-btns">
+            <a class="prev" href="#">&laquo</a>
+            <a class="next" href="#">&raquo</a>
+          </div>
+        </div>
       </section>
 
     </main>
