add scroll spy function

--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
@@ -51,7 +51,7 @@
     <!-- Panel -->
     <aside class="panel">
       <nav class="menu">
-        <a href="#seccion1" data-scroll-spy>Reloj Digital y Alarma Sonora</a>
+        <a href="#seccion1" class="active" data-scroll-spy>Reloj Digital y Alarma Sonora</a>
         <a href="#seccion2" data-scroll-spy>Eventos del Teclado</a>
         <a href="#seccion3" data-scroll-spy>Cuenta Regresiva</a>
         <a href="#seccion4" data-scroll-spy>Responsive con JavaScript</a>
