apply IntersectionObservern function

--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
@@ -38,7 +38,7 @@
   </head>
   <body class="body" data-dark>
     <!-- Header -->
-    <header>
+    <header class="header">
         <h3>Ejercicios del DOM</h3>
     </header>
     <!-- 1 - Menu Hamburguesa -->
