add smart video function

--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
@@ -34,6 +34,8 @@
     <link rel="stylesheet" href="components/15_carrusel/carrusel.css" />
     <!-- SCROLL SPY -->
     <link rel="stylesheet" href="components/16_scrollSpy/scrollSpy.css" />
+    <!-- Video Inteligente -->
+    <link rel="stylesheet" href="components/17_video-inteligente/video-inteligente.css" />
 
   </head>
   <body class="body" data-dark>
@@ -63,7 +65,7 @@
         <a href="#seccion10" data-scroll-spy>Filtros de Busqueda</a>
         <a href="#seccion11" data-scroll-spy>Sorteo Digital</a>
         <a href="#seccion12" data-scroll-spy>Responsive Slider</a>
-        <a href="#seccion13" data-scroll-spy></a>
+        <a href="#seccion13" data-scroll-spy>Video Inteligente</a>
         <a href="#seccion14" data-scroll-spy></a>
         <a href="#seccion15" data-scroll-spy></a>
       </nav>
@@ -207,6 +209,15 @@
             <a class="prev" href="#">&laquo</a>
             <a class="next" href="#">&raquo</a>
           </div>
+        </div>
+      </section>
+      
+      <!-- ============ VIDEO INTELIGENTE ============ -->
+      <section id="seccion13" class="section" data-scroll-spy>
+        <h2>Video Inteligente</h2>
+        <div class="container-video">
+          <video src="assets/video-tech.mp4" class="video" muted controls loop data-smart-video></video>
+          <video src="assets/video.mp4" class="video-2" muted controls loop data-smart-video></video>
         </div>
       </section>
 
