--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
@@ -69,7 +69,7 @@
         <a href="#seccion12" data-scroll-spy>Responsive Slider</a>
         <a href="#seccion13" data-scroll-spy>Video Inteligente</a>
         <a href="#seccion14" data-scroll-spy>Validaciones de Formularios</a>
-        <a href="#seccion15" data-scroll-spy></a>
+        <a href="#seccion15" data-scroll-spy>Narrador</a>
       </nav>
     </aside>
 
@@ -226,11 +226,14 @@
       <!-- ============ VALIDACIONES DE FORMULARIOS ============ -->
       <section id="seccion14" class="section" data-scroll-spy style="background-color: var(--gray-color);">
         <h2>Validaciones de Formularios</h2>
-        <form class="contact-form">
+        <!-- Nota: la api de 'formsubmit' solo funciona cuando la pagina se esta ejecutando en un servidor, ya sea local o remoto y quitando la funcion 'preventDefault()' -->
+        <form class="contact-form" action="https://formsubmit.co/jhonatansouzameza100@gmail.com" method="POST" target="_blank">
+          <!-- _next -->
+          <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
           <legend>Enviame tus comentarios</legend>
           <input type="text" name="name" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" title="El nombre solo hacepta letras y espacios en blanco" placeholder="Escribe tu nombre" required>
-          <input type="text" name="asunto" title="El asunto es requerido" placeholder="Asunto a tratar" required>
-          <input type="email" name="email" pattern="^[a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,15})$" title="Email incorrecto" placeholder="Escribe tu email" required>
+          <input type="email" name="email" pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" title="Email incorrecto" placeholder="Escribe tu email" required>
+          <input type="text" name="subject" title="El asunto es requerido" placeholder="Asunto a tratar" required>
           <textarea name="comments" cols="50" rows="5" placeholder="Escribe tu comentario" title="Tu comenentario no debe superar los 255 caracteres" required data-pattern="^.{1,255}$"></textarea>
           <input type="submit" value="Enviar">
           <div class="contact-form-loader none">
@@ -241,9 +244,9 @@
           </div>
       </section>
 
-      <!-- ============ SECCION 15 ============ -->
+      <!-- ============ NARRADOR ============ -->
       <section id="seccion15" class="section" data-scroll-spy>
-        <h2>Seccion 15</h2>
+        <h2>Narrador</h2>
       </section>
 
     </main>
