add speech function

--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
@@ -247,6 +247,13 @@
       <!-- ============ NARRADOR ============ -->
       <section id="seccion15" class="section" data-scroll-spy>
         <h2>Narrador</h2>
+        <select name="" id="speech-select">
+          <option value="">...Elije una Voz...</option>
+          <br><br>
+          <textarea name="speech-text" id="" cols="50" rows="50" placeholder="Ingresa texto para leer..."></textarea>
+          <br><br>
+          <buuton id="speech-button">Leer Texto</buuton>
+        </select>
       </section>
 
     </main>
