--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/01_ajax/ajax.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/01_ajax/ajax.html
@@ -13,13 +13,15 @@
   <p></p>
   <ul></ul>
   <h2>Objeto XMLHttpRequest</h2>
-  <ol id="xhr"></ol>
+  <ol id="xml"></ol>
   <h2>API Fetch</h2>
   <ol id="fetch"></ol>
   <h2>API Fetch + Async-Await</h2>
   <ol id="async"></ol>
-  <h2>Async-Await + Axios (Framework)</h2>
+  <h2>Axios (Framework)</h2>
   <ol id="axios"></ol>
+  <h2>Axios + Async-Await</h2>
+  <ol id="async-axios"></ol>
   <br><br><br><br><br><br><br><br><br><br>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="ajax.js"></script>
