--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/02_rest-api/03_crud_axios/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/02_rest-api/03_crud_axios/index.html
@@ -9,6 +9,51 @@
 
 <body>
   <h1>CRUD API REST AXIOS</h1>
+
+  <section id="crud">
+    <article>
+      <h2 class="crud-title">Agregar Santos</h2>
+
+      <form class="crud-form">
+        <input type="text" name="nombre" placeholder="Nombre">
+        <br>
+        <input type="text" name="constelacion" placeholder="Constelacion">
+        <br>
+        <input type="submit" value="Enviar">
+        <input type="hidden" name="id">
+      </form>
+
+    </article>
+
+    <article>
+      
+      <h2>Ver Santos</h2>
+      <table class="crud-table">
+        <thead>
+          <tr>
+            <th>Nombre</th>
+            <th>Constelacion</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          
+        </tbody>
+      </table>
+
+    </article>
+  </section>
+
+  <template id="crud-template">
+    <tr>
+      <td class="name"></td>
+      <td class="constelation"></td>
+      <td>
+        <button class="edit">Editar</button>
+        <button class="delete">Eliminar</button>
+      </td>
+    </tr>
+  </template>
   
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="index.js" type="module"></script>
