create an uploader with php

--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/03_ajax-ejercicios/03_uploader-ajax/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/03_ajax-ejercicios/03_uploader-ajax/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,7 +32,7 @@
 
   <main class="flex columns-1 justify-center items-center min-h-screen">
     <!-- No form needed with PHP -->
-    <input type="file" id="files" name="files" multiple />
+    <input type="file" id="files" name="files" multiple>
     <!-- Use event "cahnge" -->
   </main>
 
