--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/05_TailwindCss/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/05_TailwindCss/index.html
@@ -5,8 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Animation Tailwind</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  
+  <h1>123</h1>
+  <h2>456</h2>
 </body>
 </html>
