learn promise all

--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/03_ajax-ejercicios/07_stripe-checkout/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/03_ajax-ejercicios/07_stripe-checkout/index.html
@@ -6,9 +6,9 @@
   <title>Checkout con Stripe</title>
 </head>
 <body>
-  <section id="products"></section>
-  <template id="description">
-    <figure id="product">
+  <section id="section"></section>
+  <template id="template">
+    <figure id="figure" class="figure">
       <img>
       <figcaption></figcaption>
     </figure>
