learn api key & auth

--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/03_ajax-ejercicios/12_select-anidados/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/03_ajax-ejercicios/12_select-anidados/index.html
@@ -8,14 +8,19 @@
 <body>
   <h1>Selects Anidados</h1>
   <h2>Mexico</h2>
-  <label for="select-primary">Estados</label>
+  <label for="select-primary">Countries</label>
   <select name="primary" id="select-primary">
+    <option value="">Elije un Pais</option>
+  </select>
+  <p></p>
+  <label for="select-secondary">States</label>
+  <select name="secondary" id="select-secondary">
     <option value="">Elije un Estado</option>
   </select>
   <p></p>
-  <label for="select-secondary">Municipios</label>
-  <select name="secondary" id="select-secondary">
-    <option value="">Elije un Municipio</option>
+  <label for="select-city">Cities</label>
+  <select name="secondary" id="select-city">
+    <option value="">Elije una Ciudad</option>
   </select>
   <p></p>
   <script src="script.js"></script>
