SPA: single file component

--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/00_dom-ejercicios/index.html
@@ -244,6 +244,7 @@
           <div class="contact-form-response none">
             <p>Los datos han sido enviados exitosamente</p>
           </div>
+        </form>
       </section>
 
       <!-- ============ NARRADOR ============ -->
