--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/04_SPA/index.html
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/04_SPA/index.html
@@ -6,6 +6,7 @@
   <title>Vanilla JS SPA</title>
   <link rel="stylesheet" href="app/assets/styles.css">
   <link rel="icon" href="app/assets/favicon.png">
+  <style id="dynamic-styles"></style>
 </head>
 <body>
   <div id="root"></div>
